<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChatApp</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>

    <string name="cancel">Cancel</string>
    <string name="change_username">Change username</string>
    <string name="enter_username">Enter username</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="usernameError">This username is not available.</string>
    <string name="usernameHint">Use 4 or more characters.</string>
    <string name="usernameInfo">Pick username for your account. You can always change it later.</string>
    <string name="no_results">No results</string>
    <string name="change_a_bit_your_query">Change a bit your query</string>
    <string name="type_a_message">Type a message</string>
    <string name="record_failed">You can\'t record a voice message while you\'re recording in another app</string>
</resources>