<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/titleDialogSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dialogTitleBackground"
                    android:gravity="start"
                    android:padding="10dp"
                    android:textColor="@color/dialogTitleTextColor"
                    android:textSize="24sp"
                    android:textStyle="normal|bold"/>

            <EditText
                    android:id="@+id/usernameEditText"
                    android:hint="@string/enter_username"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/arrowColor"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/cancelButton"
                        android:layout_weight="1"
                        android:textColor="@color/dialogButtonTextColor"
                        android:textSize="16sp"
                        android:textAllCaps="false"
                        android:textStyle="normal"
                        android:background="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/cancel"/>

                <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/arrowColor"/>

                <Button
                        android:id="@+id/searchButton"
                        android:layout_weight="1"
                        android:textColor="@color/dialogButtonTextColor"
                        android:textSize="16sp"
                        android:textAllCaps="false"
                        android:textStyle="normal"
                        android:background="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/search"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>